--- a/mnist_training.ipynb
+++ b/mnist_training.ipynb
@@ -574,14 +574,14 @@
    "source": [
     "### ☆ Bonus Exercise ☆\n",
     "\n",
-    "Ultimately, each neuron is trying to fit a line to some data. Below, we have some datapoints and a randomly drawn line using the equation [y = mx + b](https://www.mathsisfun.com/equation_of_line.html).\n",
+    "Ultimately, each neuron is trying to fit a line to some data. Below, we have some datapoints and a randomly drawn line using the equation [$y = mx + b$](https://www.mathsisfun.com/equation_of_line.html).\n",
     "\n",
     "We have to use `polyfit` function to assign `m` and the `b` in order to find the lowest possible loss."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -624,6 +624,38 @@
     "plt.show()\n",
     "\n",
     "print(\"Loss:\", np.sum((y - y_hat) ** 2) / len(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5811388300841898\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [(1, 3), (2, 5)]\n",
+    "m = -1\n",
+    "b = 5\n",
+    "\n",
+    "def get_rmse(data: list, m: int, b: int):\n",
+    "  \"\"\"Calculates Mean Square Error.\"\"\"\n",
+    "  n = len(data)\n",
+    "  squared_error = 0\n",
+    "  for x, y in data:\n",
+    "    y_hat = m * x + b\n",
+    "    squared_error += (y - y_hat) ** 2\n",
+    "  mse = squared_error / n\n",
+    "\n",
+    "  return mse ** .5\n",
+    "\n",
+    "print(get_rmse(data, m, b))"
    ]
   }
  ],
